fix cutoff decenders in title bar
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@33511 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_header.scss
+++ b/src/main/resources/scss/_header.scss
@@ -36,7 +36,8 @@
 		}
 
 		.title {
-			font: normal 700 1.1em/1em 'Open Sans Condensed';
+			margin-top: -0.2em;
+			font: normal 700 1.1em/1.5 'Open Sans Condensed';
 			text-transform: uppercase;
 			color: $primary-grey;
 			overflow: hidden;
